Bug 168528 - Freezing with minimum letter spacing and minimum glyph scaling
Summary: Freezing with minimum letter spacing and minimum glyph scaling
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium critical
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: 38159 Paragraph-Alignment
  Show dependency treegraph
 
Reported: 2025-09-24 07:45 UTC by László Németh
Modified: 2025-10-31 11:00 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
tdf168528.odt: test document with embedded Source Serif 4 Variable font (986.24 KB, application/vnd.oasis.opendocument.text)
2025-09-24 07:49 UTC, László Németh
Details
tdf168528_freezing.odt: test document with embedded Source Serif 4 Variable font (986.29 KB, application/vnd.oasis.opendocument.text)
2025-09-24 07:54 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description László Németh 2025-09-24 07:45:17 UTC
Description:
Rare freezing, when the last paragraph line contains a single short word, and minimum letter spacing or minimum glyph scaling are enabled.

Steps to Reproduce:
1. Open the attached test document.


Actual Results:
Freezing.

Expected Results:
No Freezing.


Reproducible: Always


User Profile Reset: No

Additional Info:
See Bug 167648 and Bug 168251.
Comment 1 László Németh 2025-09-24 07:49:42 UTC
Created attachment 202943 [details]
tdf168528.odt: test document with embedded Source Serif 4 Variable font
Comment 2 László Németh 2025-09-24 07:54:31 UTC
Created attachment 202944 [details]
tdf168528_freezing.odt: test document with embedded Source Serif 4 Variable font
Comment 3 ajlittoz 2025-09-24 09:14:41 UTC
Could you elaborate more on the freeze?

I opened your test document "as is" under Fedora 42 (Linux 6.16.7), KDE Plasma desktop (Qt-based), LO 25.2.6.2 (x86_64), VCL kf6 and I have no freeze. Is the freeze specific to an enhancement added in 25.8 or 26.0?
Comment 4 László Németh 2025-09-24 16:46:09 UTC
(In reply to ajlittoz from comment #3)
> Could you elaborate more on the freeze?
> 
> I opened your test document "as is" under Fedora 42 (Linux 6.16.7), KDE
> Plasma desktop (Qt-based), LO 25.2.6.2 (x86_64), VCL kf6 and I have no
> freeze. Is the freeze specific to an enhancement added in 25.8 or 26.0?

@ajlittoz: this is a 26.2 (master) only feature, so the best is to test with the daily build: https://dev-builds.libreoffice.org/daily/master/current.html
Comment 5 Commit Notification 2025-09-25 08:04:45 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8306c4e86aacfe0e2a7b2aedb88c404735dccdcd

tdf#168528 sw letter spacing: fix freezing with minimum spacing/scaling

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Eyal Rozenberg 2025-09-26 06:54:02 UTC
I don't understand what was buggy in the behavior before this patch, and what the new behavior is. I realize the bug is resolved already, but still.

What's expected to happen?
Comment 7 Commit Notification 2025-09-26 13:12:06 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e03dbd2e30805c4d84e772e0509dd0fc1c8a89ae

tdf#168528 sw letter spacing: fix false alarm with missing font

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 László Németh 2025-09-26 14:57:56 UTC
(In reply to Eyal Rozenberg from comment #6)
> What's expected to happen?

No freezing, i.e. no deadlock (which is only a little bit better, than program crashing: the program is not interactive, maybe automatic saving will create a copy of the document.)