tdf#168528 sw letter spacing: fix freezing with minimum spacing/scaling

Fix never-ending loop in SwTextFrame::Format_() resulted by bad compression of lines with COMPLETE_STRING cut position.

Note: to test the fix of the rare freezing, a subset font has been
created from Source Serif 4 Variable, and embedded in the test file.

Follow-up to commit 33f20d0a0fb32bf4452c15c6ae0e7c85b2ee6d46
"tdf#168351 sw letter spacing: fix spaces in the last line",
commit 45ec7bd76196dcc60b4c2db2f6f00623ecbaf5a4
"tdf#168251 cui offapi xmloff sw glyph scaling: extend UNO/UX/ODF",
commit 3c53797210bf0a4e3ffb36ed2beac4d5ce229ff2
"tdf#167648 sw letter spacing: implement minimum letter spacing"
and commit f83a04c51056445bbf947a31c8c1866a5c30bef1
"tdf#167648 cui offapi xmloff sw: add DTP-feature maximum letter
spacing".

Change-Id: I517f2b878421df40d69c785155107cf7380f0c0c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191432
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>